crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__negative_literal.snap
---
source: crates/cranexpr-parser/src/lib.rs
expression: "parse_expr(\"-4 -5 - 6 -\").unwrap()"
---
- Binary:
    - Sub
    - Binary:
        - Sub
        - Lit: -4
        - Lit: -5
    - Lit: 6
