crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__prop.snap
---
source: crates/cranexpr-parser/src/lib.rs
expression: "parse_expr(\"x.PlaneStatsAverage\").unwrap()"
---
- Prop:
    - x
    - PlaneStatsAverage
