crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__swap.snap
---
source: crates/cranexpr-parser/src/lib.rs
expression: "parse_expr(\"3.14 dup 0 > swap 0 < -\").unwrap()"
---
- Binary:
    - Sub
    - Binary:
        - Gt
        - Lit: 3.14
        - Lit: 0
    - Binary:
        - Lt
        - Lit: 3.14
        - Lit: 0
