crates/cranexpr-parser/src/snapshots/cranexpr_parser__tests__xor.snap
---
source: crates/cranexpr-parser/src/lib.rs
expression: "parse_expr(\"x 0 > y 0 > xor\").unwrap()"
---
- Binary:
    - Xor
    - Binary:
        - Gt
        - Ident: x
        - Lit: 0
    - Binary:
        - Gt
        - Ident: y
        - Lit: 0
